--- a/fashion_probing/fig3_brand_fuzziness_visual.ipynb
+++ b/fashion_probing/fig3_brand_fuzziness_visual.ipynb
@@ -56,13 +56,7 @@
     "    dataset_root='F://datasets',\n",
     "    dataset_name='fashion_brands_looks',\n",
     "    set_img_num = 3,\n",
-    "    # checkpoint_name='brands_c5_100looks_res101_cat.bsz_16sz_224.sgd0.002', #finetuned on resnet101\n",
-    "    # checkpoint_name= \"brands_c5_100looks_res101_mean.bsz_16sz_224.sgd0.002\", #mean\n",
     "    checkpoint_name = \"resnet18\",\n",
-    "\n",
-    "    # dataset_name ='fashion_brands',\n",
-    "    # checkpoint_name='fashion_brands_101_res101_aug_filtered24.bsz_16sz_224.sgd0.002',\n",
-    "\n",
     "    # checkpoint_name='imagenet',\n",
     "    num_inducing = 100, #[100,200,300,400,500,600,700,800], #100\n",
     "    latent_dim = 10, #[5,10,15,20,25,30,35,40,45,50], #10\n",
@@ -142,7 +136,7 @@
     "torch.manual_seed(0)\n",
     "device = torch.device('cuda:0' if use_gpu else 'cpu')\n",
     "\n",
-    "embedding_path = Path('E:\\\\coding\\\\fashion_probing_git\\\\fashion_expert\\\\fashion_gp\\\\embeddings\\\\') / dataset_name / checkpoint_name\n",
+    "embedding_path = Path('embeddings\\\\') / dataset_name / checkpoint_name\n",
     "dataset_path = Path(dataset_root) / dataset_name\n",
     "print(\"dataset path:\")\n",
     "print(dataset_path/'train.json')\n",
